Fix methods of `forward` family in `OutboundMessageService` don't always return offline recipient IDs (which will cause push notifications not work as expected) #1283